# macro-trends

./: .gitignore  README.md  pyproject.toml
data/: macro.db  primary.db-client_wal_index  primary.db-shm  primary.db-wal
notebooks/: fetch_data.ipynb  fine_tune_model.ipynb  generate_summaries.ipynb
site/: components.json  drizzle.config.ts  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts  vite.config.ts
site/app/: root.tsx  sessions.server.tsx  tailwind.css
site/app/components/: markdown-renderer.tsx  theme-toggle.tsx
site/app/modules/summaries/: service.server.ts
site/app/routes/: _index.tsx
site/drizzle/: 0000_wooden_longshot.sql  db.server.ts  schema.ts
site/drizzle/meta/: 0000_snapshot.json  _journal.json
