[tool.poetry]
name = "macro-environment"
version = "0.1.0"
description = ""
authors = ["KoJaco <kojaco.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
requests = "^2.32.3"
pysqlite3 = "^0.5.4"
python-dotenv = "^1.0.1"
jupyter = "^1.1.1"
openai = "^1.55.2"
libsql-experimental = "^0.0.41"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
